        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=20184
        SELECT with no name generates invalid query string

        Test: fast/forms/select-no-name.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::appendFormData): Added a check for empty name.



Canonical link: https://commits.webkit.org/33217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41135 268f45cc-cd09-0410-ab3c-d52691b4dbfc